# QuizBot

./: .gitignore  README.md  database.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: bug回報.md  功能要求.md  空白模板.md
.github/workflows/: dev_pythontest0611.yml  main_ncu-quiz-bot.yml  main_ncu-quizbot.yml  main_pythontest0611.yml
QuizBot/: asgi.py  middleware.py  production.py  service.py  settings.py  urls.py  utils.py  wsgi.py
QuizBot/settings/: production.py
doc/: note.md  t1.py  week2-2 copy.jsonl  week2-2.jsonl  week2-3.jsonl  啟用步驟.md  格式化code.md
src/apps/account/: apps.py  forms.py  models.py  urls.py  views.py
src/apps/accounts/: apps.py  forms.py  models.py  urls.py  views.py
src/apps/chapter/: admin.py  apps.py  models.py
src/apps/chatbot/: admin.py  apps.py  backend.py  models.py  serializers.py
src/apps/home/: apps.py  urls.py  views.py
src/apps/management_sample/: urls.py  views.py
src/client/account/: apps.py  bankend.py  urls.py  views.py
src/client/home/: apps.py  urls.py  views.py
src/static/app/: email-compose.html  email-index.html  index-email.html  index.html
src/static/css/: backend-plugin.min.css  backend.css  style.css  typography.css
src/static/js/: animated.js  chart-custom.js  core.js  country2.js  highcharts-3d.js  maps.js  smooth-scrollbar.js  utils.js
src/templates/account/: login.html  register.html
src/templates/accounts/: register.html
src/templates/home/: index.html  page.html
src/templates/includes/: head.html  menu-list.html  message.html  navbar.html  scripts.html  (+2 more)
(+152 files in other folders)
